Select first workspace instead of a fixed one

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
       - asana_admin
     depends_on: 
       - db
+    env_file:
+      - .env
     command: /bin/bash ./build.sh
 
 volumes:
